# wetering-production-control

./: .env.example  .flake8  .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_AI_PROMPT.md  COPYRIGHT  Dockerfile  Dockerfile.base  README.md  docker-compose.yml  docker-entrypoint.sh  makefile  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
backups/: backup_001.csv
docs/: architecture.md  deployment.md  development.md  docker-base-image.md  protocol.md  vision.md
scripts/: analyze_errors.py  browse_leuze.py  check_workflow.py  check_workflow.sh  docker_build_optimization.md  example_spacing.py  generate_client_cert.py  generate_opcua_certificate.py  generate_test_qr_codes.py  monitor_leuze.py  monitor_plc.py  opc_monitor.py  opc_test_server.py  opc_write_test.py  plc_connection_test.py  probe_opcua_endpoint.py  test_docker_pull_time.sh  test_multiple_writes.py  test_run_io_bound.py  test_webapp_approach.py  write_plc.py
tests/: conftest.py  test_active_potting_lot_models.py  test_active_potting_lot_service.py  test_bulb_picklist_models.py  test_bulb_picklist_repository.py  test_cli.py  test_cli_config.py  test_cli_fix_errors.py  test_cli_spacing.py  test_inspectie_changes.py  test_inspectie_commands.py  test_inspectie_models.py  test_inspectie_repository.py  test_inspectie_repository_date_range.py  test_inspectie_scan_interop.py  test_opc_integration.py  test_opc_production_features.py  test_potting_lots_models.py  test_potting_lots_repository.py  test_potting_lots_url_parser.py  test_products_models.py  test_products_repository.py  test_spacing_models.py  (+3 more)
(+267 files in other folders)
